--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-handlebars": "^7.1.2",
     "mysql2": "^3.9.6",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
